app/assets/stylesheets/pages/todos.scss
/**
 * Dashboard Todos
 *
 */

.navbar-nav {
  li {
    .badge.todos-pending-count {
      background-color: $gl-icon-color;
      margin-top: -5px;
      font-weight: normal;
    }
  }
}

.todo {
  &:hover {
    cursor: pointer;
  }
}

.todo-item {
  .todo-title {
    @include str-truncated(calc(100% - 174px));
    overflow: visible;
  }

  .status-box {
    margin: 0;
    float: none;
    display: inline-block;
    font-weight: normal;
  }

  .todo-body {
    margin-right: 174px;

    .todo-note {
      word-wrap: break-word;

      .md {
        color: #7f8fa4;
        font-size: $gl-font-size;

        .label {
          color: $gl-text-color;
          font-size: inherit;
        }

        p {
          color: #5c5d5e;
        }
      }

      pre {
        border: none;
        background: #f9f9f9;
        border-radius: 0;
        color: #777;
        margin: 0 20px;
        overflow: hidden;
      }

      .note-image-attach {
        margin-top: 4px;
        margin-left: 0;
        max-width: 200px;
        float: none;
      }

      p:last-child {
        margin-bottom: 0;
      }
    }
  }
}

@media (max-width: $screen-xs-max) {
  .todo-item {
    padding-left: $gl-padding;

    .todo-title {
      white-space: normal;
      overflow: visible;
      max-width: 100%;
    }

    .avatar {
      display: none;
    }

    .todo-body {
      margin: 0;
      border-left: 2px solid #ddd;
      padding-left: 10px;
    }
  }
}

